Finally fixed the issue of the text overflowing from hero aca into bunny girl senpai

--- a/src/Stylesheets/main.css
+++ b/src/Stylesheets/main.css
@@ -39,6 +39,12 @@ h1{
     margin:10px;
     font-size: 20px;
 }
+.moreStuff{
+    float:left;
+    width:100%;
+    display:block;
+    height:auto;
+}
 #current{
     background-color:#8D80AD;
     color:#9DFFF9;
